tests/compile_fail/debug/legacy_bound_syntax.stderr
error: legacy syntax, use `bound(String: std::fmt::Display)` instead
 --> tests/compile_fail/debug/legacy_bound_syntax.rs:2:9
  |
2 | #[debug(bound = "String: std::fmt::Display")]
  |         ^^^^^
